add_subdirectory(argument_setup_test)
add_subdirectory(buffer_queue_test)
add_subdirectory(cycle_manager_test)
add_subdirectory(plugins)
add_subdirectory(reader_synchronizer_test)
add_subdirectory(trigger_handler_test)
#Enable this test once the ticket SIMEN-7420 resolved
#add_subdirectory(data_publisher_test)
