set(CMAKE_CXX_STANDARD 17)

#add_subdirectory(app_lifecycle_test)
add_subdirectory(cmdoption)
add_subdirectory(config_base)
add_subdirectory(config_change_hook_handler)
add_subdirectory(config_comp_data)
add_subdirectory(config_database_IO)
add_subdirectory(config_database_manager)
add_subdirectory(config_client)
add_subdirectory(config_inter_node_tests)
add_subdirectory(config_multiple_client_tests)
add_subdirectory(events)
add_subdirectory(install_cmake)
add_subdirectory(license_checker)
add_subdirectory(lifecycle_test)
add_subdirectory(log_connector)
add_subdirectory(log_router)
add_subdirectory(package_hash)
add_subdirectory(profiler)
add_subdirectory(sdk_ecal_config_file)
add_subdirectory(sdk_ecal_gtest_fixture)
add_subdirectory(sdk_ecal_singleton_initialization)
add_subdirectory(sdk_init_chain)
add_subdirectory(sdk_logger)
add_subdirectory(sdk_string_helper)
add_subdirectory(sdk_version_manager)
add_subdirectory(status_code_log_test)
add_subdirectory(user_hash)
