add_subdirectory(DataBroadcaster)
add_subdirectory(DataClassManager)
add_subdirectory(DataManager)
add_subdirectory(DataRequestServer)
add_subdirectory(flatbuffer_core_parsing)
add_subdirectory(flatbuffer_parsing)
add_subdirectory(flatbuffer_parsing_speed)
add_subdirectory(pluginConfigHandler)
#add_subdirectory(PluginManager)
add_subdirectory(Plugins)
add_subdirectory(SimulationEnvironmentCache)
