add_subdirectory(cycle_event_test)
add_subdirectory(cycle_information_event_test)
add_subdirectory(event_initialize_test)
add_subdirectory(event_manager_test)
add_subdirectory(event_override_test)
add_subdirectory(lifecycle_state_event_test)
add_subdirectory(lifecycle_trigger_event_test)
add_subdirectory(log_event_test)
add_subdirectory(multiple_event_test)
add_subdirectory(multiple_subscribes_test)
add_subdirectory(req_conf_from_client_test)
add_subdirectory(req_conf_from_server_test)
add_subdirectory(req_conf_value_from_server_test)
add_subdirectory(req_eventupdate_test)
add_subdirectory(send_conf_tags_to_server_test)
add_subdirectory(send_conf_to_client_test)
add_subdirectory(send_conf_to_server_test)
add_subdirectory(send_conf_value_to_client_test)
add_subdirectory(status_code_event_test)
add_subdirectory(update_topic_cache_test)
add_subdirectory(version_info_test)
