if(DELIVERY_RELEASE)
  add_subdirectory(system_EcalMonitor)
  add_subdirectory(system_SignalExporter)
  add_subdirectory(system_RecExporter)
  add_subdirectory(system_ReferenceCamera)
  add_subdirectory(system_SignalList)
  add_subdirectory(system_SignalProvider)
  add_subdirectory(system_SignalRawData)
  add_subdirectory(view3D_ArrayTpObjects)
  add_subdirectory(view3D_CanTpObjects)
  add_subdirectory(view3D_EgoVehicle)
  add_subdirectory(view3D_Road)
  add_subdirectory(view3D_PointCloud)
  add_subdirectory(view3D_StructTpObjects)

else()
  # keep this list alphabetically sorted, makes it easier for merging
  add_subdirectory(system_EcalMonitor)
  add_subdirectory(system_SignalExporter)
  add_subdirectory(system_RawFrameView)
  add_subdirectory(system_RecExporter)
  add_subdirectory(system_ReferenceCamera)
  add_subdirectory(system_SignalList)
  add_subdirectory(system_SignalProvider)
  add_subdirectory(system_SignalRawData)
  add_subdirectory(view3D_ArrayTpObjects)
  add_subdirectory(view3D_CanTpObjects)
  add_subdirectory(view3D_EgoVehicle)
  add_subdirectory(view3D_Road)
  add_subdirectory(view3D_PointCloud)
  add_subdirectory(view3D_StructTpObjects)

  ########################### PerformanceViewer currently depends on Windows libs
  if (MSVC)
      add_subdirectory(system_PerformanceViewer)
  endif ()
endif()